--- a/infrastructure/package.json
+++ b/infrastructure/package.json
@@ -21,6 +21,13 @@
     "typescript": "~3.9.7"
   },
   "dependencies": {
+    "@aws-cdk/aws-autoscaling": "^1.109.0",
+    "@aws-cdk/aws-ec2": "^1.109.0",
+    "@aws-cdk/aws-ecr": "^1.109.0",
+    "@aws-cdk/aws-ecs": "^1.108.1",
+    "@aws-cdk/aws-ecs-patterns": "^1.108.1",
+    "@aws-cdk/aws-eks": "^1.109.0",
+    "@aws-cdk/aws-s3": "^1.108.1",
     "@aws-cdk/core": "1.108.1",
     "source-map-support": "^0.5.16"
   }
